# terrain3d-rs

godot/: HelloWorld.gdextension  Helloworld.apple-touch-icon.png.import  Helloworld.html  Helloworld.icon.png.import  Helloworld.pck  Helloworld.png.import  Waterwheel1.gd  Waterwheel_1.obj.import  Waterwheel_Flume_Curved.obj.import  Waterwheel_Flume_End.obj.import  Waterwheel_Flume_Ramp.obj.import  Waterwheel_Flume_Ramp_Supported.obj.import  Waterwheel_Flume_Straight.obj.import  Waterwheel_Flume_Support_Brace.obj.import  Waterwheel_Flume_Support_Brace_Double.obj.import  Waterwheel_Flume_Support_Pillar.obj.import  Wood_Baseboard.obj.import  Wood_Floor_Corner.obj.import  export_presets.cfg  icon.svg.import  maiD127.tmp  main.tscn  new_orm_material_3d.tres  new_terrain_3d_material.tres  node_3d.tscn  project.godot
hellobindings/: Cargo.toml  build.ps1
hellobindings/src/: lib.rs  player.rs  player2.rs  terrain_3d.rs
hellobindings/src/terrain_3d/: generated_tex.rs  geoclipmap.rs  terrain_3d_core.rs  terrain_3d_material.rs  terrain_3d_storage.rs  utils.rs
